--- a/Parte_4_10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/Parte_4_10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Rarruti74/ONLINE_DS_THEBRIDGE_Rarruti/blob/main/Parte_4_10_Ejercicios_Python_Basisc_I_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "GB2K42EgK9q5"
       },
       "source": [
@@ -174,12 +164,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "s2QfNiBAK9q7"
+        "id": "s2QfNiBAK9q7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d76e5940-c1f9-43ba-a6c9-cb2d959964ce"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Para calcular el área de un paralelogramo, introduce los siguientes datos:\n",
+            "Introduce el valor en milímetros de la base del paralelogramo:20\n",
+            "Introduce el valor en milímetros de la altura del paralelogramo10\n",
+            "El valor del área del paralelogramo es: 200 milímetros cuadrados\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Programa para el cálculo del área de un paralelogramo con input (base x altura)\n",
+        "# Tenemos 4 tipos de paralelogramos: Cuadrados, rombos, rectángulos y romboides.\n",
+        "\n",
+        "# Solicitamos el ingreso de los datos por teclado\n",
+        "print (\"Para calcular el área de un paralelogramo, introduce los siguientes datos:\")\n",
+        "paral_base = input (\"Introduce el valor en milímetros de la base del paralelogramo:\")\n",
+        "paral_altura = input (\"Introduce el valor en milímetros de la altura del paralelogramo\")\n",
+        "\n",
+        "# Convertimos los valores introducidos de tipo string a tipo float\n",
+        "paral_base_real = int (paral_base)\n",
+        "paral_altura_real = int (paral_altura)\n",
+        "\n",
+        "# Cálculo del area del paralelogramo (Area = base x altura)\n",
+        "paral_area = paral_base_real * paral_altura_real\n",
+        "\n",
+        "# Imprimimos el valor del área del paralelogramo\n",
+        "print (\"El valor del área del paralelogramo es:\", paral_area, \"milímetros cuadrados\")\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -195,12 +218,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "uzUIa1JqK9q8"
+        "id": "uzUIa1JqK9q8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "36fec6f4-185b-43f7-fd78-7d12f9eebbcf"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Para calcular el área de un paralelogramo, introduce los siguientes datos: \n",
+            "Introduce el valor en milímetros de la base del paralelogramo: 10,233\n",
+            "Introduce el valor en milímetros de la altura del paralelogramo12,443\n",
+            "El valor del área del paralelogramo es: 127.329 milímetros cuadrados\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Programa para el cálculo del área de un paralelogramo con input (base x altura) con decimales en español (decimal \",\")\n",
+        "# Tenemos 4 tipos de paralelogramos: Cuadrados, rombos, rectángulos y romboides.\n",
+        "\n",
+        "# Solicitamos el ingreso de los datos por teclado\n",
+        "print (\"Para calcular el área de un paralelogramo, introduce los siguientes datos: \")\n",
+        "paral_base = input (\"Introduce el valor en milímetros de la base del paralelogramo: \")\n",
+        "paral_altura = input (\"Introduce el valor en milímetros de la altura del paralelogramo \")\n",
+        "\n",
+        "# Convertimos los valores introducidos de tipo string a tipo float, reemplazando previamente \",\" por \".\" en los decimales\n",
+        "paral_base_real = float (paral_base.replace (\",\",\".\"))\n",
+        "paral_altura_real = float (paral_altura.replace (\",\", \".\"))\n",
+        "\n",
+        "# Cálculo del area del paralelogramo (Area = base x altura)\n",
+        "paral_area = paral_base_real * paral_altura_real\n",
+        "\n",
+        "# Imprimimos el valor del área del paralelogramo redondeado a 3 decimales\n",
+        "print (\"El valor del área del paralelogramo es:\", round (paral_area,3), \"milímetros cuadrados\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,16 +272,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "LISfTnRkK9q8"
+        "id": "LISfTnRkK9q8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6278fab5-bffa-4459-deb0-1c6fcae80965"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¿Cuál es tu nombre? Roberto\n",
+            "¿Cuál será tu edad al final de este año? 51\n",
+            "Roberto, naciste en el año 1974.\n"
+          ]
+        }
+      ],
       "source": [
-        "nombre = _______(\"¿Cuál es tu nombre? \")\n",
-        "edad = _____(input(\"¿Cuál es tu edad? \"))\n",
-        "año_actual = 2023  # Puedes cambiarlo según el año en curso\n",
-        "año_nacimiento = año_actual - _____\n",
+        "nombre = input (\"¿Cuál es tu nombre? \")\n",
+        "edad = input (\"¿Cuál será tu edad al final de este año? \")\n",
+        "año_actual = 2025  # Puedes cambiarlo según el año en curso\n",
+        "año_nacimiento = año_actual - int (edad)\n",
         "\n",
         "print(f\"{nombre}, naciste en el año {año_nacimiento}.\")\n"
       ]
@@ -251,8 +321,7 @@
     },
     "orig_nbformat": 4,
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
