--- a/Copia_de_Parte_5_Ejercicio_práctico_DS_01_02_01_N13.ipynb
+++ b/Copia_de_Parte_5_Ejercicio_práctico_DS_01_02_01_N13.ipynb
@@ -90,7 +90,7 @@
         }
       ],
       "source": [
-        "# 1. Creamos la siguiente lista y la pintamos\n",
+        "# 1. Creamos la siguiente lista y la printamos\n",
         "ejer_2 = [1, 2, 3, 4, 5]\n",
         "print (\"Tenemos la siguiente lista, ejer_2:\", ejer_2)\n",
         "# print (type (ejer_2)) # Confirmamos que se trata de una lista\n",
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -529,7 +529,7 @@
         "id": "vRPQDNYrGmej",
         "outputId": "6d10b6bb-bda4-4c54-9218-9b0aa03f767f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "veNdC-uwRWxJ",
         "colab": {
@@ -609,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "eWHdJi9BRWxJ",
         "colab": {
@@ -659,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "xbj0LgvnRWxJ",
         "colab": {
@@ -733,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "4-JrsMdNRWxK",
         "colab": {
@@ -786,7 +786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "sk852IZ8RWxK",
         "colab": {
@@ -836,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "F5Z9rSHqRWxK",
         "colab": {
